objects/smagicinteract__Conversation_Related_Objects__c.object
<CustomObject>
    <fields>
        <fullName>smagicinteract__Absolute_Field__c</fullName>
        <label>Absolute Field</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Conversation_Field__c</fullName>
        <label>Conversation Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__MOC__c</fullName>
        <label>MOC</label>
        <referenceTo>smagicinteract__Message_Object_Config__c</referenceTo>
        <relationshipLabel>Conversation Related Objects</relationshipLabel>
        <relationshipName>Conversation_Related_Objects</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Relative_Field__c</fullName>
        <label>Relative Field</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <label>Conversation Related Objects</label>
    <nameField>
        <displayFormat>CRO-{000000}</displayFormat>
        <label>Conversation Related Objects Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Conversation Related Objects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>